chore: refactor to code to use data-ub instead of data-uber

--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -9,24 +9,7 @@
 <h1>Sudoku</h1>
 
 <table id="sudoku-table"
-       data-uber-sudoku>
-<tbody>
-<tr>
-  <td></td>
-  <td></td>
-  <td></td>
-</tr>
-<tr>
-  <td></td>
-  <td></td>
-  <td></td>
-</tr>
-<tr>
-  <td></td>
-  <td></td>
-  <td></td>
-</tr>
-</tbody>
+       data-ub-sudoku>
 </table>
 
 <button class="validate-btn"
