--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta name="robots" content="noindex">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/app.css">
 <title>Sudoku</title>
 </head>
