style: add some opacity transition on success gif - also use `//`, relative path

--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -24,7 +24,7 @@
             data-ub-target="#sudoku-table">
       Cheat Fill
     </button>
-    <img class="success-gif" src="" data-ub-lazy-src="http://i.giphy.com/YD52EUqEZ0yxG.gif">
+    <img class="success-gif" alt="Success Minion Gif" data-ub-lazy-src="//i.giphy.com/YD52EUqEZ0yxG.gif">
   </div>
   <table id="sudoku-table"
          data-ub-sudoku>
