chore: move css, js dir into static. - put the success gif into img dir

--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta name="robots" content="noindex">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/base.css">
-<link rel="stylesheet" href="css/index.css">
-<link rel="stylesheet" href="css/ub-sudoku.css">
+<link rel="stylesheet" href="static/css/base.css">
+<link rel="stylesheet" href="static/css/index.css">
+<link rel="stylesheet" href="static/css/ub-sudoku.css">
 <title>Sudoku</title>
 </head>
 <body class="page-index">
@@ -24,16 +24,16 @@
             data-ub-target="#sudoku-table">
       Cheat Fill
     </button>
-    <img class="success-gif" alt="Success Minion Gif" data-ub-lazy-src="//i.giphy.com/YD52EUqEZ0yxG.gif">
+    <img class="success-gif" alt="Success Minion Gif" data-ub-lazy-src="static/img/success.gif">
   </div>
   <table id="sudoku-table"
          data-ub-sudoku>
   </table>
 </div>
 
-<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="js/ub-lazy-src.js"></script>
-<script type="text/javascript" src="js/ub-sudoku.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="static/js/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="static/js/ub-lazy-src.js"></script>
+<script type="text/javascript" src="static/js/ub-sudoku.js"></script>
+<script type="text/javascript" src="static/js/index.js"></script>
 </body>
 </html>
