feat: add toast notification - Show some notification to user when state is saved and loaded - Refactor some code

--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -80,14 +80,20 @@
       </div>
       <div class="modal-footer">
         <a data-ub-dismiss="modal">NO</a>
-        <a class="load-state-ok-btn">OK</a>
+        <a class="load-state-ok-btn">YES</a>
       </div>
     </div>
   </div>
 </div>
 
+<div id="toast-flash" class="toast">
+  <div class="message"></div>
+  <a class="close">&times;</a>
+</div>
+
 <!-- TODO: combine and minify this block (output: all.min.js) -->
 <script type="text/javascript" src="static/js/lib/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="static/js/window-ub.js"></script>
 <!-- endblock -->
 
 <!-- TODO: combine and minify this block (output: index.min.js) -->
