style: main toolbar be absolute, not fixed

--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -24,7 +24,7 @@
 </head>
 <body class="page-index">
 
-<div class="fixed-toolbar">
+<div class="main-toolbar">
   <i class="fa fa-cog"
      data-ub-toggle="modal"
      data-ub-modal-target="#settings-modal"></i>
