--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -87,7 +87,7 @@
         Load from state?
       </div>
       <div class="modal-body">
-        Saved state detected, would you liked to load from last saved state?
+        Saved state detected, would you like to load from last saved state?
       </div>
       <div class="modal-footer">
         <a data-ub-dismiss="modal">NO</a>
