chore: add FastClick library to remove delay on click on iOS

--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -133,7 +133,9 @@
 <!-- TODO: combine and minify this block (output: all.min.js) -->
 <script type="text/javascript" src="static/js/lib/modernizr.custom.49198.js"></script>
 <script type="text/javascript" src="static/js/lib/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="static/js/lib/fastclick.min.js"></script>
 <script type="text/javascript" src="static/js/window-ub.js"></script>
+<script type="text/javascript" src="static/js/app.js"></script>
 <!-- endblock -->
 
 <!-- TODO: combine and minify this block (output: index.min.js) -->
