--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -77,7 +77,7 @@
   </table>
 </div>
 
-<div class="ub-modal no-footer ub-modal-center" id="load-state-modal">
+<div class="ub-modal ub-modal-center" id="load-state-modal">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="ub-modal-close no-select" data-ub-dismiss="modal">
@@ -97,7 +97,7 @@
   </div>
 </div>
 
-<div class="ub-modal no-footer ub-modal-center" id="settings-modal">
+<div class="ub-modal ub-modal-center" id="settings-modal">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="ub-modal-close no-select" data-ub-dismiss="modal">
@@ -120,6 +120,23 @@
       </div>
       <div class="modal-footer">
         <a data-ub-dismiss="modal">DONE</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="ub-modal" id="abuse-modal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="ub-modal-close no-select" data-ub-dismiss="modal">
+        &times;
+      </div>
+      <div class="modal-title no-select">
+        Don't abuse me!
+      </div>
+      <div class="modal-body center no-select">
+        Really? You need to save that many times?
+        <img alt="Abuse Pic" data-ub-lazy-src="static/img/abuse.jpg">
       </div>
     </div>
   </div>
