chore: add jquery.cookie plugin to show some helpful save tip

--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -156,6 +156,7 @@
 <!-- endblock -->
 
 <!-- TODO: combine and minify this block (output: index.min.js) -->
+<script type="text/javascript" src="static/js/lib/jquery.cookie.min.js"></script>
 <script type="text/javascript" src="static/js/modules/ub-lazy-src.js"></script>
 <script type="text/javascript" src="static/js/modules/ub-timer.js"></script>
 <script type="text/javascript" src="static/js/modules/ub-sudoku.js"></script>
