fix: keyup event from getting added more and more...

--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -37,9 +37,9 @@
 <div class="table-wrapper">
   <div class="timer"
        id="sudoku-timer-1">
-    <span data-ub-timer="hour">00</span> :
-    <span data-ub-timer="minute">00</span> :
-    <span data-ub-timer="second">00</span>
+    <span class="no-select" data-ub-timer="hour">00</span> :
+    <span class="no-select" data-ub-timer="minute">00</span> :
+    <span class="no-select" data-ub-timer="second">00</span>
   </div>
   <div class="toolbar top">
     <!-- could use SCSS so that we could just put no-select style into btn -->
