--- a/slot-machine/index.html
+++ b/slot-machine/index.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <a class="btn cheat-btn"
+  <a class="btn no-select cheat-btn"
      data-slot-machine-target="#slot-machine"
      data-slot-machine-trigger="cheatEnd">Cheat</a>
 </div>
@@ -55,6 +55,10 @@
       <div class="modal-title">
       </div>
       <div class="modal-body">
+        <div class="text"></div>
+        <div class="success-gif">
+          <img src="static/img/success.gif">
+        </div>
       </div>
       <div class="modal-footer">
         <a data-ks-dismiss="modal">OK</a>
