--- a/slot-machine/index.html
+++ b/slot-machine/index.html
@@ -12,7 +12,6 @@
   <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet" type="text/css">
 
   <!-- TODO: combine and minify this block (output: all.min.css) -->
-  <link rel="stylesheet" href="static/css/lib/font-awesome.min.css">
   <link rel="stylesheet" href="static/css/base.css">
   <!-- endblock -->
 
@@ -36,7 +35,7 @@
     <div data-slot="0"></div>
     <div data-slot="1"></div>
     <div data-slot="2"></div>
-    <div class="wheel" id="wheel-0">
+    <div class="wheel no-select" id="wheel-0">
       <div class="ball"></div>
     </div>
   </div>
@@ -69,6 +68,8 @@
 
 <!-- TODO: combine and minify this block (output: all.min.js) -->
 <script type="text/javascript" src="static/js/lib/jquery-2.1.1.min.js"></script>
+<script type="text/javascript" src="static/js/lib/modernizr.custom.49198.js"></script>
+<script type="text/javascript" src="static/js/app.js"></script>
 <!-- endblock -->
 
 <!-- TODO: combine and minify this block (output: index.min.js) -->
