fix: forgot to add fastclick library :(

--- a/slot-machine/index.html
+++ b/slot-machine/index.html
@@ -36,7 +36,7 @@
     <div data-slot="1"></div>
     <div data-slot="2"></div>
     <div class="wheel no-select" id="wheel-0">
-      <div class="ball"></div>
+      <div class="ball no-select"></div>
     </div>
   </div>
 
@@ -69,6 +69,7 @@
 <!-- TODO: combine and minify this block (output: all.min.js) -->
 <script type="text/javascript" src="static/js/lib/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="static/js/lib/modernizr.custom.49198.js"></script>
+<script type="text/javascript" src="static/js/lib/fastclick.min.js"></script>
 <script type="text/javascript" src="static/js/app.js"></script>
 <!-- endblock -->
 
