feat: add ks-modules page - just to show case my modules

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         Slot Machine
       </a>
     </li>
+    <li>
+      <a href="/ks-modules">
+        ks-modules (my own modules)
+      </a>
+    </li>
   </ul>
 </div>
 
